--- a/nrbcTestTask/src/Views/Identity/Login.cshtml
+++ b/nrbcTestTask/src/Views/Identity/Login.cshtml
@@ -11,6 +11,7 @@
 	<div class="tile-row">
 		<div class="tile">
 			<h3>Аутентификация</h3>
+			<div asp-validation-summary="All" class="text-danger"></div>
 			<form asp-action="Login" method="post" class="login-form">
 
 				@*UserName*@
